Treat correctly typed TLV Nulls as Empty Structs
This change makes it so that untyped and struct typed nulls are treated
as empty structs. This is consistent with the Ion Hive SerDe and Json
Deserializer.

I also changed the exception type to TrinoException for the mistyping
cases and added test cases.